Revert to standard scientific calculator

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <a href="pages/calculators.html" class="dropdown-link">Calculators</a>
                         <a href="pages/visualizations.html" class="dropdown-link">Visualizations</a>
                         <a href="pages/auto-graph.html" class="dropdown-link">Auto Graph</a>
+                        <a href="pages/scientific-calculator.html" class="dropdown-link">Scientific Calculator</a>
                         <a href="pages/formulas-sheet.html" class="dropdown-link">Formulas Sheet</a>
                         <a href="pages/tables.html" class="dropdown-link">Statistical Tables</a>
                         <a href="pages/glossary.html" class="dropdown-link">Glossary</a>
