Add README and trigger rebuild

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    <!-- QuantMaster Website v1.0 -->
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-container">
